# centlalia-mvp

./: .env.example  .gitignore  .prettierignore  .vercelignore  Anchor.toml  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
apps/web/: eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: app-shell.tsx  check-in-evidence-list.tsx  create-event-page.tsx  demo-workspace.tsx  event-detail-page.tsx  landing-page.tsx  manage-event-page.tsx  marketplace-page.tsx  my-events-page.tsx  my-tickets-page.tsx  onchain-vertical.tsx  solana-diagnostic.tsx  staff-check-in-page.tsx  ticket-pass.tsx
apps/web/e2e/: main-flow.spec.ts
apps/web/hooks/: use-check-in-evidence.ts
apps/web/lib/: check-in-flow.ts  format.ts  onchain-format.ts  solana-error.ts
apps/web/providers/: gateway-provider.tsx  (+1 more)
docs/: ARQUITECTURA.md  CUENTAS-ONCHAIN.md  DECISIONES.md  DEMO-DAY.md  EVIDENCIA-VERTICAL-CORE.md  FONDEO-POSTPROGRAMA.md  FUNDAMENTO-NEGOCIO.md  PROTOCOLO-VALIDACION.md  ROADMAP.md  TRAZABILIDAD.md  VALIDACION-SISTEMA.md
programs/ticketing/: Cargo.toml
programs/ticketing/src/: asset.rs  domain.rs  errors.rs  events.rs  lib.rs  state.rs
programs/ticketing/src/contexts/: check_in.rs  mod.rs  platform_event.rs  tickets.rs
programs/ticketing/src/instructions/: check_in.rs  mod.rs  platform_event.rs  tickets.rs
scripts/: check-secrets.mjs
(+18 files in other folders)
