[package]
name = "centlalia-ticketing"
version = "0.1.0"
description = "Centlalia verifiable event ticketing program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "centlalia_ticketing"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.1.2", features = ["init-if-needed"] }
mpl-core = "0.12.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(target_os, values("solana"))',
] }
